@footer-bottom: fixed padding on small screens

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -17,7 +17,6 @@
     @include responsive(md) {
       padding-inline: 2rem;
     }
-
     .footer__brand {
       @include responsive(xs) {
         width: 100%;
@@ -35,7 +34,6 @@
         font-size: var(--step--2);
         line-height: 1.6;
         margin-bottom: 1.3rem;
-
         @include responsive(xs) {
           max-width: 40ch;
         }
@@ -123,10 +121,6 @@
     gap: 1rem;
     justify-content: center;
     align-items: center;
-    @include responsive(sm) {
-      padding-block: unset;
-      margin-block: 1.5rem calc(var(--header-actions-height) + 1rem);
-    }
     
     @include responsive(lg) {
       padding-block-end: 1rem;
